fake_app开发&房源数据构造

--- a/doc/fake_app/仿真服务现有能力及数据集说明.md
+++ b/doc/fake_app/仿真服务现有能力及数据集说明.md
@@ -201,9 +201,9 @@
 | fake_app 能力与接口设计 | AgentGame/doc/fake_app/house_rental_design.md、landmark_manager.md |
 | 房源数据集生成脚本 | AgentGame/fake_app/py/generate_houses.py |
 | 评测集初始结构（案例定义） | AgentGame/fake_app/data/case_init.json |
-| 构造完整评测集（调接口补 houses） | AgentGame/fake_app/py/build_eval_dataset.py；默认输入 case_init.json、输出 case_result.json；支持 --case-ids / --case-id-range 仅处理指定案例 |
+| 完整评测集（含 houses 数据） | AgentGame/fake_app/data/case_result.json |
+| 完整评测集构造脚本（调接口补 houses） | AgentGame/fake_app/py/build_eval_dataset.py；默认输入 case_init.json、输出 case_result.json；支持 --case-ids / --case-id-range 仅处理指定案例 |
 | Agent 可集成的仿真服务工具集说明（OpenAPI 3） | AgentGame/fake_app/data/fake_app_agent_tools.json |
-| house/landmark 代码解读 | AgentGame/doc/fake_app/house_go_解读.md、landmark_go_解读.md |
 
 ---
 
